# hdl-registers

./: .gitignore  .gitlab-ci.yml  README.md  github-actions-demo.yml  license.rst  pyproject.toml  readme.rst  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  main.yml
doc/release_notes/: 2.0.0.rst  2.0.1.rst  2.1.0.rst  3.0.0.rst  3.0.2.rst  4.0.0.rst  4.0.1.rst  5.0.0.rst  5.1.1.rst  5.1.2.rst  5.2.0.rst  6.0.0.rst  6.1.0.rst  7.0.1.rst  7.0.2.rst  7.0.3.rst  7.1.0.rst  7.3.0.rst  8.0.0.rst  8.1.0.rst  unreleased.rst
doc/sphinx/: c_generator.rst  conf.py  contributing.rst  cpp_generator.rst  getting_started.rst  html_generator.rst  index.rst  license_information.rst  python_generator.rst  registers.rst  release_notes.rst  robots.txt  toml_format.rst  vhdl_generator.rst
hdl_registers/: __init__.py  about.py  bit.py  bit_vector.py  conftest.py  constant.py  html_translator.py  parser.py  register.py  register_array.py  register_c_generator.py  register_code_generator.py  register_cpp_generator.py  register_field.py  register_field_type.py  register_html_generator.py  register_list.py  register_mode.py  register_modes.py  register_python_generator.py  register_vhdl_generator.py  requirements.txt  requirements_develop.txt
hdl_registers/constant/: bit_vector_constant.py  boolean_constant.py  constant.py  (+3 more)
tests/: regs_test.toml
tools/: benchmark.py  build_badges_for_website.py  build_docs.py  build_website.py  profiling.py  pypi_test_script.py  tag_release.py  test_print_register_accessor.py  tools_pythonpath.py
(+327 files in other folders)
