# ------------------------------------------------------------------------------
[tool.black]
line-length = 100


# ------------------------------------------------------------------------------
[tool.isort]
# Make base formatting compatible with black settings
profile = "black"
line_length = 100

skip = ["generated"]

# Add comments before each import group
import_heading_future = "Future libraries"
import_heading_stdlib = "Standard libraries"
import_heading_tools_pythonpath = """\
Import before others since it modifies PYTHONPATH. pylint: disable=unused-import"""
import_heading_firstparty = "First party libraries"
import_heading_thirdparty = "Third party libraries"
import_heading_localfolder = "Local folder libraries"

# Change order so that "tools_pythonpath" Python module, which is a "first party" import,
# is placed before "third party" imports.
# This is since that import updates PYTHONPATH, which is needed to find e.g. VUnit which is a
# third party import.
known_tools_pythonpath = "tools.tools_pythonpath"
sections = "FUTURE,STDLIB,TOOLS_PYTHONPATH,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"


# ------------------------------------------------------------------------------
[tool.mypy]
exclude = ['/test_.*\.py$', '/conftest.py$']

# Use strict as a base, and explicitly remove the checks that we do not want.
strict = true


# ------------------------------------------------------------------------------
[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"
